# Connect4

docs/: implementations.md  roadmap.md
docs/implementations/: denseboard.md
include/ConnectX/: DenseBoard.hpp  Types.hpp  Utils.hpp
include/ConnectX/Vector/: VecDiv.hpp  VecEqual.hpp  VecEx.hpp  VecGreater.hpp  VecGreaterEq.hpp  VecLess.hpp  VecLessEq.hpp  VecMax.hpp  VecMin.hpp  VecMul.hpp  VecNegate.hpp  VecNot.hpp  VecScalar.hpp  VecSub.hpp  VecSum.hpp  Vector.hpp
src/: CMakeLists.txt  DenseBoard.cpp  IOController.cpp  Types.cpp  Utils.cpp
tests/: CMakeLists.txt
tests/denseboard/: CMakeLists.txt  GetDenseRangeTester.cpp  SetAllTester.cpp  SetGetTester.cpp  StartEndTester.cpp
tests/iocontroller/: PrintTester.cpp
tests/vector_expressions/: CMakeLists.txt  VecExChainedOperationTester.cpp  VecExDivTester.cpp  VecExEqualTester.cpp  VecExInequalTester.cpp  VecExMinMaxTester.cpp  VecExMulTester.cpp  VecExNegateTester.cpp  VecExNotEqualTester.cpp  VecExNotTester.cpp  VecExScalarTester.cpp  VecExSubtractTester.cpp  VecExSumTester.cpp
